--- a/PC/3ddemo.html
+++ b/PC/3ddemo.html
@@ -18,10 +18,10 @@
             margin: 100px auto 0;
             height: 400px;
             width: 400px;
-            -webkit-transition: -webkit-transform 1s linear;
+            -webkit-transition: -webkit-transform 1s ease;
             -webkit-transform-style: preserve-3d;
 
-            -moz-transition: -moz-transform 1s linear;
+            -moz-transition: -moz-transform 1s ease;
             -moz-transform-style: preserve-3d;
         }
 
