--- a/PC/taiji.html
+++ b/PC/taiji.html
@@ -39,6 +39,23 @@
             height: 12px;
         }
 
+        #yin-yang {
+            -webkit-animation: recycle 2s infinite linear;
+            -webkit-transition: -webkit-transform .5s linear;
+        }
+
+        @-webkit-keyframes recycle{
+            0%{
+                -webkit-transform:rotate(0);
+            }
+            50%{
+                -webkit-transform:rotate(180deg);
+            }
+            100%{
+                -webkit-transform:rotate(360deg);
+            }
+        }
+
     </style>
 </head>
 <body>
