--- a/PC/gallery.html
+++ b/PC/gallery.html
@@ -12,17 +12,7 @@
 </head>
 
 <body>
-<ul id="nav">
-	<li>
-		<a href="" class="link-1"></a>
-		<a href="" class="link-2"></a>
-		<a href="" class="link-3"></a>
-		<a href="" class="link-4"></a>
-		<a href="" class="link-5"></a>
-	</li>
-</ul>
-<ul id="nav">
-</ul>
+<ul id="nav"></ul>
 <div id="gallery_contain"></div>
 <div id="debug"></div>
 </body>
