--- a/PC/gallery.html
+++ b/PC/gallery.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>My UK Travel Gallery</title>
-<script type="text/javascript" src="js/jquery-1.6.4.min.js"></script>
-<script type="text/javascript" src="js/transformjs.1.0.beta.2.min.js"></script>
-<script type="text/javascript" src="js/common.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
-<link href="css/index.css" rel="stylesheet" />
-<link href="css/main.css" rel="stylesheet" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>My Storyboard</title>
+    <script type="text/javascript" src="js/jquery-1.6.4.min.js"></script>
+    <script type="text/javascript" src="js/transformjs.1.0.beta.2.min.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <link href="css/index.css" rel="stylesheet"/>
+    <link href="css/main.css" rel="stylesheet"/>
 </head>
 
 <body>
-<ul id="nav"></ul>
+<!--<ul id="nav"></ul>-->
 <div id="gallery_contain"></div>
 <div id="debug"></div>
 </body>
