--- a/PC/gallery.html
+++ b/PC/gallery.html
@@ -15,5 +15,13 @@
 <!--<ul id="nav"></ul>-->
 <div id="gallery_contain"></div>
 <div id="debug"></div>
+<script id="slideTpl" type="text/tpl">
+    <div data-id="$$id$$" class="flip-container hidden">
+        <div class="flipper">
+            <div class="front">$$front$$</div>
+            <div class="back">$$back$$</div>
+        </div>
+    </div>
+</script>
 </body>
 </html>
