--- a/PC/ppt.html
+++ b/PC/ppt.html
@@ -239,7 +239,7 @@
     </div>
 </div>
 
-<div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="2">
+<div class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="2">
     <q>单机游戏之路</q>
 
     <ul style="font-size: 30px;">
@@ -267,7 +267,7 @@
     </ul>
 </div>
 
-<div id="movie" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="3">
+<div id="movie" class="step" data-x="5000" data-y="5000" data-rotate="90" data-scale="3">
     <q>美剧之路</q>
     <ul style="font-size: 30px;">
         <li>看过的最长的一步美剧：老友记</li>
@@ -302,20 +302,10 @@
     </ul>
 </div>
 
-<div id="ralationmatrix" class="step" data-x="9000" data-y="5000" data-rotate="0" data-scale="0.8">
-    <div id="answer" style="display: none; ">
-        <div>scale + skew</div>
-        <div style="position: relative; left:300px;">
-            <div id="orginal_retatebox" class="boxmodel"></div>
-            <div id="rotatebox" style="position: absolute;left:0;top:0; background-color: #E6926D; opacity: 0.5"></div>
-        </div>
-        <div>
-            <a href="javascript:$('#rotatebox').addClass('scale');">scale(cos(30deg),cos(30deg))</a>+
-            <a href="javascript:$('#rotatebox').addClass('skew');">skew(-30deg,30deg)</a>=<br/>
-            <a href="javascript:$('#orginal_retatebox').addClass('rotate');">rotate(30deg)</a>
-        </div>
-        <div style="font-size: 30px;">rotate(a) = matrix(cos(a), sin(a), -sin(a), cos(a), 0, 0)</div>
-    </div>
+<div class="step" data-x="9000" data-y="5000" data-rotate="0" data-scale="0.8">
+    <q>职业之路</q>
+
+
 </div>
 
 <div id="howtomakerotate" class="step" data-x="10000" data-y="5000" data-rotate="0" data-scale="1">
