--- a/PC/ppt.html
+++ b/PC/ppt.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=1024"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <title>CSS3 变形之美 - HTML 5 之美</title>
+    <title>个人介绍</title>
 
     <link href="css/experiment.css" rel="stylesheet" type="text/css"/>
     <link href="css/impress-demo.css" rel="stylesheet"/>
@@ -23,22 +23,13 @@
 <div id="impress">
 
 <div id="start" class="step slide" data-x="-1000" data-y="-1500">
-    <q style="text-align: center; margin-top: 180px;">CSS3 Transform<br/>Matrix2D&3D</q>
-    <q style="width:250px; height: 250px; float: right; text-align: right">
+    <q style="text-align: center; margin-top: 180px;">
+        自我介绍
+    </q>
+    <q style="width:250px; height: 250px; float: right; text-align: right;">
         轩与<br/>
-        2012.4
+        2014.9
     </q>
-</div>
-
-<div id="bored" class="step slide" data-x="0" data-y="-1500" data-scale="0.6">
-    <q style="margin-left: 100px; margin-top:50px; ">CSS3
-        <ul style="font-size:40px; list-style:disc;">
-            <li>Transform</li>
-            <li>Transition</li>
-            <li>Animation</li>
-        </ul>
-    </q>
-
     <div id="sphere" class="contact">
         <div class="rotator">
             <div class="container"></div>
@@ -49,182 +40,19 @@
     <script type="text/javascript" src="js/experiment.js"></script>
 </div>
 
-<div class="step slide" data-x="1000" data-y="-1500" data-scale="0.8">
-    <q style="margin-top: 10px;">CSS少女 K-ON! 秋山澪</q>
-    <q style="margin-top: 0px;">
-        <div id="main">
-            <div id="ins">
-                <div id="bg"></div>
-                <div class="draw">
-                    <div id="head"></div>
-                    <div id="hear_back">
-                        <div class="hb1 black"></div>
-                        <div class="hb2 black"></div>
-                        <div class="hb3"></div>
-                        <div class="hb4"></div>
-                        <div class="hb5 pink"></div>
-                        <div class="hb6 pink"></div>
-                        <div class="hb7 pink"></div>
-                        <div class="hb8"></div>
-                        <div class="hb9 black"></div>
-                        <div class="hb10"></div>
-                        <div class="hb11 pink"></div>
-                        <div class="hb12 pink"></div>
-                        <div class="hb13"></div>
-                        <div class="hb14 pink"></div>
-                        <div class="hb15"></div>
-                        <div class="hb16"></div>
-                        <div class="hb17 black"></div>
-                        <div class="hb18"></div>
-                    </div>
-                    <div id="clothes">
-                        <div class="cls1"></div>
-                        <div class="cls2"></div>
-                        <div class="cls3"></div>
-                        <div class="cls4"></div>
-                        <div class="cls5"></div>
-                        <div class="cls6"></div>
-                        <div class="cls7"></div>
-
-
-                        <div class="cls8"></div>
-                        <div class="cls9"></div>
-                    </div>
-                    <div id="ear">
-                        <div class="ear1"></div>
-                        <div class="ear2"></div>
-                        <div class="ear3 org"></div>
-                        <div class="ear4"></div>
-                        <div class="ear5 none"></div>
-                        <div class="ear6 none"></div>
-                        <div class="ear7"></div>
-                        <div class="ear8"></div>
-                    </div>
-                    <div id="neck"></div>
-                    <div id="face">
-                        <div class="fac1"></div>
-                        <div class="fac2"></div>
-                        <div class="fac3"></div>
-                        <div class="fac4"></div>
-                        <div class="fac5"></div>
-                        <div class="fac6"></div>
-                        <div class="fac7 sha"></div>
-                        <div class="fac8 sha"></div>
-                        <div class="fac9 sha"></div>
-                        <div class="norse1"></div>
-                        <div class="norse2"></div>
-                        <div class="mouth1"></div>
-                        <div class="mouth2"></div>
-                        <div class="fac10"></div>
-                        <div class="fac11"></div>
-                        <div class="fac12 line"></div>
-                        <div class="fac13 line"></div>
-                        <div class="fac14 line"></div>
-                        <div class="fac15 line"></div>
-                        <div class="fac16 line"></div>
-                    </div>
-                    <div id="eye">
-                        <div class="eye1 line"></div>
-                        <div class="eye2 line"></div>
-                        <div class="eye3 line"></div>
-                        <div class="eye4 line"></div>
-                        <div class="eye5"></div>
-                        <div class="eye6"></div>
-                        <div class="eye7"></div>
-                        <div class="eye8 gray"></div>
-                        <div class="eye9 white"></div>
-                        <div class="eye10"></div>
-                        <div class="eye11 white anime"></div>
-                        <div class="eye12 purple"></div>
-                        <div class="eye13 purple"></div>
-                        <div class="eye14 white anime"></div>
-                        <div class="eye15 line"></div>
-                        <div class="eye16 line"></div>
-                        <div class="eye17"></div>
-                        <div class="eye18"></div>
-                        <div class="eye19 gray"></div>
-                        <div class="eye20 white"></div>
-                        <div class="eye21 line"></div>
-                        <div class="eye22"></div>
-                        <div class="eye23"></div>
-                        <div class="eye24 purple"></div>
-                        <div class="eye25"></div>
-                        <div class="eye26 white anime"></div>
-                        <div class="eye27 white anime"></div>
-                        <div class="eye28 purple"></div>
-                        <div class="eye29 line"></div>
-                        <div class="eye30 line"></div>
-                        <div class="eye31 line"></div>
-                    </div>
-                    <div id="hair_front">
-                        <div class="hf1"></div>
-                        <div class="hf2"></div>
-                        <div class="hf3"></div>
-                        <div class="hf4"></div>
-                        <div class="hf5"></div>
-                        <div class="hf6"></div>
-                        <div class="hf7"></div>
-                        <div class="hf8"></div>
-                        <div class="hf9"></div>
-                        <div class="hf10"></div>
-                        <div class="hf11"></div>
-                        <div class="hf12"></div>
-                        <div class="hf13"></div>
-                        <div class="hf14"></div>
-                        <div class="hf15"></div>
-                        <div class="hf16">
-                            <div></div>
-                        </div>
-                        <div class="hf17"></div>
-                        <div class="hf18"></div>
-                        <div class="hf19"></div>
-                        <div class="hf20"></div>
-                        <div class="hf21"></div>
-                        <div class="hf22"></div>
-                        <div class="hf23"></div>
-                        <div class="hf24"></div>
-                        <div class="hf25"></div>
-                        <div class="hf26"></div>
-                        <div class="hf27"></div>
-                        <div class="hf28"></div>
-                        <div class="hf29"></div>
-                        <div class="hf30"></div>
-                        <div class="hf31"></div>
-                        <div class="hf32"></div>
-                        <div class="hf33"></div>
-                    </div>
-                    <div id="light">
-                        <div class="light1"></div>
-                        <div class="light2"></div>
-                        <div class="light3"></div>
-                        <div class="light4"></div>
-                        <div class="light5"></div>
-                        <div class="light6"></div>
-                        <div class="light7"></div>
-                        <div class="light8"></div>
-                        <div class="light9"></div>
-                        <div class="light10"></div>
-                        <div class="light11"></div>
-                    </div>
-                    <div id="dark">
-                        <div class="dark1"></div>
-                        <div class="dark2"></div>
-                        <div class="dark3"></div>
-                        <div class="dark4"></div>
-                        <div class="dark5"></div>
-                        <div class="dark6"></div>
-                        <div class="dark7"></div>
-                        <div class="dark8"></div>
-                        <div class="dark9"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<div id="info" class="step slide" data-x="0" data-y="-1500" data-scale="0.6">
+    <q style="margin-left: 100px; margin-top:50px; ">
+        <span style="margin-bottom: 50px;">个人特点</span>
+        <ul style="font-size:40px; list-style:disc;">
+            <li>喜欢思考，喜欢了解原因</li>
+            <li>不喜欢吃饭，觉得吃饭是一种负担</li>
+            <li>对各种新奇事物的好奇心</li>
+        </ul>
     </q>
 </div>
 
 <div id="title" style="background-color: black;width:1500px;height: 1000px; z-index: 0" class="step" data-x="0"
-     data-y="0" data-scale="0.8">
+     data-y="0" data-scale="1">
     <div id="container">
         <div id="frame">
             <div class="inner">
@@ -240,16 +68,16 @@
 </div>
 
 <div class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="2">
-    <q>单机游戏之路</q>
+    <q>游戏之路</q>
 
     <ul style="font-size: 30px;">
-        <li>人生中第一部游戏机：任天堂红白机</li>
-        <li>曾经拥有的游戏机：红白机、MD、GBA、PS1、PS2、PS3、Saturn、PSP、PSV等等</li>
+        <li>人生中第一部游戏机：任天堂红白机FC，在上海第一百货购买</li>
+        <li>拥有的游戏机：FC、MD、GB/GBA、PS1/2/3、Saturn、PSP、PSV等</li>
         <li>第一个单机游戏：魂斗罗，最佳战绩：3条命，复版3次，一次不死，命奖励到36条</li>
-        <li>喜欢的单机游戏：最终幻想7，梦幻模拟战II、三国志III、英雄传说系列、山脊赛车、战神系列 ...</li>
-        <li>最喜欢的PC游戏：轩辕剑系列 仙剑奇侠传、 Diablo I/II，使命召唤系列，刺客信条系列、鬼武士...</li>
+        <li>喜欢的游戏：最终幻想系列，梦幻模拟战II、三国志III、英雄传说系列、山脊赛车、战神系列 ...</li>
+        <li>最喜欢的PC游戏：轩辕剑系列 仙剑奇侠传、 Diablo I/II，使命召唤系列，刺客信条系列、鬼武士系列...</li>
         <li>最疯狂的时候：每天除了6小时睡觉，就是玩游戏，连续一周，体重轻了6斤</li>
-        <li>总共玩的游戏的数量不少于500个</li>
+        <li>总结一句话：基本玩腻了，现在只是跟一下风，看一下剧情，其他就没有了</li>
     </ul>
 </div>
 
@@ -377,7 +205,7 @@
 <div id="3demo" class="step" data-x="7300" data-y="4000" data-rotate="20" data-scale="1">
     <div>Matrix3D和3D变形方法之间的关系</div>
     <div style="font-size: 30px;">
-        Translate matrix — matrix3d(1,0,0,tX,0,1,0,tY,0,0,1,tZ,0,0,0,1)<br/>
+		Translate matrix — matrix3d(1,0,0,tX,0,1,0,tY,0,0,1,tZ,0,0,0,1)<br/>
         Scale matrix — matrix3d(sX,0,0,0,0,sY,0,0,0,0,sZ,0,0,0,0,1)<br/>
         RotateX(a) matrix — matrix3d(1,0,0,0,0,cos(a),sin(a),0,0,sin(-a),cos(a),0,0,0,0,1)<br/>
         RotateY(a) matrix — matrix3d(cos(a),0,sin(-a),0,0,1,0,0,sin(a),0,cos(a),0,0,0,0,1)
