--- a/PC/gallery.html
+++ b/PC/gallery.html
@@ -1,27 +1,23 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>My Storyboard</title>
-    <script type="text/javascript" src="js/jquery-1.6.4.min.js"></script>
-    <script type="text/javascript" src="js/transformjs.1.0.beta.2.min.js"></script>
-    <script type="text/javascript" src="js/common.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
-    <link href="css/index.css" rel="stylesheet"/>
-    <link href="css/main.css" rel="stylesheet"/>
-</head>
-
-<body>
-<!--<ul id="nav"></ul>-->
-<div id="gallery_contain"></div>
-<div id="debug"></div>
-<script id="slideTpl" type="text/tpl">
-    <div data-id="$$id$$" class="flip-container hidden">
-        <div class="flipper">
-            <div class="front">$$front$$</div>
-            <div class="back">$$back$$</div>
-        </div>
-    </div>
-</script>
-</body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <title>My UK Travel Gallery</title>
+        <script type="text/javascript" src="js/jquery-1.6.4.min.js"></script>
+        <script type="text/javascript" src="js/transformjs.1.0.beta.2.min.js"></script>
+        <script type="text/javascript" src="js/common.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        <link href="css/index.css" rel="stylesheet" />
+        <link href="css/main.css" rel="stylesheet" />
+    </head>
+    
+    <body>
+        <ul id="ul_sort">
+            <li><a href="javascript:imgSort(1);" class="sort_1"></a></li>
+            <li><a href="javascript:imgSort(2);" class="sort_2"></a></li>
+        </ul>
+        <ul id="nav"></ul>
+        <div id="gallery_contain"></div>
+		<div id="debug"></div>
+    </body>
 </html>
